--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 permalink:            pretty
 
 # Setup
-title:                SCHEFER SPORTSWEAR
+title:                SCHEF SPORTSWEAR
 description:          
 tagline:              
 url:                  http://xn--e1aa7aos.xn--p1acf
