--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ sass:
 owner:
   name:               Стас Шефер
   phone:              +7 922 14 226 14
-  email:              ctac@k66.ru
+  email:              nordy@mail.ru
   vk:                 sportschef
 
 admin:
